pwrp-interface-orig/rt_mh_net_h.ads


   type mh_sSelL is record
      objName : aliased pwr_h.pwr_tString80;  -- rt_mh_net.h:309
      len : aliased pwr_h.pwr_tUInt32;  -- rt_mh_net.h:310
   end record;
   pragma Convention (C_Pass_By_Copy, mh_sSelL);  -- rt_mh_net.h:308

   type mh_sEventId is record
      Nix : aliased pwr_h.pwr_tNodeIndex;  -- rt_mh_net.h:315
      BirthTime : aliased rt_net_h.net_sTime;  -- rt_mh_net.h:316
      Idx : aliased pwr_h.pwr_tUInt32;  -- rt_mh_net.h:317
   end record;
   pragma Convention (C_Pass_By_Copy, mh_sEventId);  -- rt_mh_net.h:314

   type mh_sMsgInfo is record
      Id : aliased mh_sEventId;  -- rt_mh_net.h:322
      Object_V3 : aliased pwr_h.pwr_tObjid;  -- rt_mh_net.h:323
      Outunit : aliased pwr_h.pwr_tObjid;  -- rt_mh_net.h:324
      SupObject_V3 : aliased pwr_h.pwr_tObjid;  -- rt_mh_net.h:325
      EventFlags : aliased mh_mEventFlags;  -- rt_mh_net.h:326
      EventTime : aliased rt_net_h.net_sTime;  -- rt_mh_net.h:327
      EventName_V3 : aliased pwr_h.pwr_tString80;  -- rt_mh_net.h:328
      EventType : aliased mh_eEvent;  -- rt_mh_net.h:329
      EventPrio : aliased mh_eEventPrio;  -- rt_mh_net.h:330
   end record;
   pragma Convention (C_Pass_By_Copy, mh_sMsgInfo);  -- rt_mh_net.h:321

   type mh_sAck is record
      Info : aliased mh_sMsgInfo;  -- rt_mh_net.h:335
      TargetId : aliased mh_sEventId;  -- rt_mh_net.h:336
      DetectTime : aliased rt_net_h.net_sTime;  -- rt_mh_net.h:337
      Outunit : aliased pwr_h.pwr_tObjid;  -- rt_mh_net.h:338
      SupInfo : aliased mh_uSupInfo;  -- rt_mh_net.h:339
      Object : aliased pwr_h.pwr_sAttrRef;  -- rt_mh_net.h:340
      SupObject : aliased pwr_h.pwr_sAttrRef;  -- rt_mh_net.h:341
      EventName : aliased pwr_h.pwr_tAName;  -- rt_mh_net.h:342
   end record;
   pragma Convention (C_Pass_By_Copy, mh_sAck);  -- rt_mh_net.h:334

   type mh_sBlock is record
      Info : aliased mh_sMsgInfo;  -- rt_mh_net.h:347
      TargetId : aliased mh_sEventId;  -- rt_mh_net.h:348
      DetectTime : aliased rt_net_h.net_sTime;  -- rt_mh_net.h:349
      Outunit : aliased pwr_h.pwr_tObjid;  -- rt_mh_net.h:350
      Status : aliased mh_mEventStatus;  -- rt_mh_net.h:351
      Object : aliased pwr_h.pwr_sAttrRef;  -- rt_mh_net.h:352
      SupObject : aliased pwr_h.pwr_sAttrRef;  -- rt_mh_net.h:353
      EventName : aliased pwr_h.pwr_tAName;  -- rt_mh_net.h:354
   end record;
   pragma Convention (C_Pass_By_Copy, mh_sBlock);  -- rt_mh_net.h:346

   type mh_sMessage is record
      Info : aliased mh_sMsgInfo;  -- rt_mh_net.h:359
      EventText : aliased pwr_h.pwr_tString80;  -- rt_mh_net.h:360
      Status : aliased mh_mEventStatus;  -- rt_mh_net.h:361
      SupInfo : aliased mh_uSupInfo;  -- rt_mh_net.h:362
      EventSound : aliased pwr_h.pwr_sAttrRef;  -- rt_mh_net.h:363
      EventMoreText : aliased pwr_h.pwr_tString256;  -- rt_mh_net.h:364
      Object : aliased pwr_h.pwr_sAttrRef;  -- rt_mh_net.h:365
      SupObject : aliased pwr_h.pwr_sAttrRef;  -- rt_mh_net.h:366
      EventName : aliased pwr_h.pwr_tAName;  -- rt_mh_net.h:367
      Receiver : aliased pwr_h.pwr_tString40;  -- rt_mh_net.h:368
   end record;
   pragma Convention (C_Pass_By_Copy, mh_sMessage);  -- rt_mh_net.h:358

   type mh_sReturn is record
      Info : aliased mh_sMsgInfo;  -- rt_mh_net.h:373
      EventText : aliased pwr_h.pwr_tString80;  -- rt_mh_net.h:374
      TargetId : aliased mh_sEventId;  -- rt_mh_net.h:375
      DetectTime : aliased rt_net_h.net_sTime;  -- rt_mh_net.h:376
      SupInfo : aliased mh_uSupInfo;  -- rt_mh_net.h:377
      Object : aliased pwr_h.pwr_sAttrRef;  -- rt_mh_net.h:378
      SupObject : aliased pwr_h.pwr_sAttrRef;  -- rt_mh_net.h:379
      EventName : aliased pwr_h.pwr_tAName;  -- rt_mh_net.h:380
   end record;
   pragma Convention (C_Pass_By_Copy, mh_sReturn);  -- rt_mh_net.h:372

   type mh_sOutunitInfo is record
      c_type : aliased mh_eOutunitType;  -- rt_mh_net.h:384
      selGen : aliased pwr_h.pwr_tUInt32;  -- rt_mh_net.h:385
      selSize : aliased pwr_h.pwr_tUInt32;  -- rt_mh_net.h:386
   end record;
   pragma Convention (C_Pass_By_Copy, mh_sOutunitInfo);  -- rt_mh_net.h:383

  -- Here comes select list if needed  
   function xdr_mh_sOutunitInfo return rpc_types_h.bool_t;  -- rt_mh_net.h:391
   pragma Import (C, xdr_mh_sOutunitInfo, "xdr_mh_sOutunitInfo");

  -- Prototypes  
   function mh_NetSendMessage
     (qid : access rt_qcom_h.qcom_sQid;
      recPlatform : access co_platform_h.co_sPlatform;
      prio : int;
      c_subtype : int;
      hp : access mh_sHead;
      size : unsigned) return pwr_h.pwr_tStatus;  -- rt_mh_net.h:397
   pragma Import (C, mh_NetSendMessage, "mh_NetSendMessage");

   function mh_NetXdrMessage
     (xdrs : access rpc_xdr_h.XDR;
      c_subtype : int;
      hp : access mh_sHead) return pwr_h.pwr_tStatus;  -- rt_mh_net.h:407
   pragma Import (C, mh_NetXdrMessage, "mh_NetXdrMessage");

  -- the xdr functions  
   function xdr_mh_mEventStatus (arg1 : access rpc_xdr_h.XDR; arg2 : access mh_mEventStatus) return rpc_types_h.bool_t;  -- rt_mh_net.h:419
   pragma Import (C, xdr_mh_mEventStatus, "xdr_mh_mEventStatus");

   function xdr_mh_eEvent (arg1 : access rpc_xdr_h.XDR; arg2 : access mh_eEvent) return rpc_types_h.bool_t;  -- rt_mh_net.h:420
   pragma Import (C, xdr_mh_eEvent, "xdr_mh_eEvent");

   function xdr_mh_eEventPrio (arg1 : access rpc_xdr_h.XDR; arg2 : access mh_eEventPrio) return rpc_types_h.bool_t;  -- rt_mh_net.h:421
   pragma Import (C, xdr_mh_eEventPrio, "xdr_mh_eEventPrio");

   function xdr_mh_eSupType (arg1 : access rpc_xdr_h.XDR; arg2 : access mh_eSupType) return rpc_types_h.bool_t;  -- rt_mh_net.h:422
   pragma Import (C, xdr_mh_eSupType, "xdr_mh_eSupType");

   function xdr_mh_eMsg (arg1 : access rpc_xdr_h.XDR; arg2 : access mh_eMsg) return rpc_types_h.bool_t;  -- rt_mh_net.h:423
   pragma Import (C, xdr_mh_eMsg, "xdr_mh_eMsg");

   function xdr_mh_eOutunitType (arg1 : access rpc_xdr_h.XDR; arg2 : access mh_eOutunitType) return rpc_types_h.bool_t;  -- rt_mh_net.h:424
   pragma Import (C, xdr_mh_eOutunitType, "xdr_mh_eOutunitType");

   function xdr_mh_eSource (arg1 : access rpc_xdr_h.XDR; arg2 : access mh_eSource) return rpc_types_h.bool_t;  -- rt_mh_net.h:425
   pragma Import (C, xdr_mh_eSource, "xdr_mh_eSource");

   function xdr_mh_mEventFlags (arg1 : access rpc_xdr_h.XDR; arg2 : access mh_mEventFlags) return rpc_types_h.bool_t;  -- rt_mh_net.h:426
   pragma Import (C, xdr_mh_mEventFlags, "xdr_mh_mEventFlags");

   function xdr_mh_sASupInfo (arg1 : access rpc_xdr_h.XDR; arg2 : access mh_sASupInfo) return rpc_types_h.bool_t;  -- rt_mh_net.h:427
   pragma Import (C, xdr_mh_sASupInfo, "xdr_mh_sASupInfo");

   function xdr_mh_sDSupInfo (arg1 : access rpc_xdr_h.XDR; arg2 : access mh_sDSupInfo) return rpc_types_h.bool_t;  -- rt_mh_net.h:428
   pragma Import (C, xdr_mh_sDSupInfo, "xdr_mh_sDSupInfo");

   function xdr_mh_sHead (arg1 : access rpc_xdr_h.XDR; arg2 : access mh_sHead) return rpc_types_h.bool_t;  -- rt_mh_net.h:429
   pragma Import (C, xdr_mh_sHead, "xdr_mh_sHead");

   function xdr_mh_sOutunitAck (arg1 : access rpc_xdr_h.XDR; arg2 : access mh_sOutunitAck) return rpc_types_h.bool_t;  -- rt_mh_net.h:430
   pragma Import (C, xdr_mh_sOutunitAck, "xdr_mh_sOutunitAck");

   function xdr_mh_sOutunitBlock (arg1 : access rpc_xdr_h.XDR; arg2 : access mh_sOutunitBlock) return rpc_types_h.bool_t;  -- rt_mh_net.h:431
   pragma Import (C, xdr_mh_sOutunitBlock, "xdr_mh_sOutunitBlock");

   function xdr_mh_sSelL (arg1 : access rpc_xdr_h.XDR; arg2 : access mh_sSelL) return rpc_types_h.bool_t;  -- rt_mh_net.h:432
   pragma Import (C, xdr_mh_sSelL, "xdr_mh_sSelL");

   function xdr_mh_sEventId (arg1 : access rpc_xdr_h.XDR; arg2 : access mh_sEventId) return rpc_types_h.bool_t;  -- rt_mh_net.h:433
   pragma Import (C, xdr_mh_sEventId, "xdr_mh_sEventId");

   function xdr_mh_sMsgInfo (arg1 : access rpc_xdr_h.XDR; arg2 : access mh_sMsgInfo) return rpc_types_h.bool_t;  -- rt_mh_net.h:434
   pragma Import (C, xdr_mh_sMsgInfo, "xdr_mh_sMsgInfo");

   function xdr_mh_sAck (arg1 : access rpc_xdr_h.XDR; arg2 : access mh_sAck) return rpc_types_h.bool_t;  -- rt_mh_net.h:435
   pragma Import (C, xdr_mh_sAck, "xdr_mh_sAck");

   function xdr_mh_sBlock (arg1 : access rpc_xdr_h.XDR; arg2 : access mh_sBlock) return rpc_types_h.bool_t;  -- rt_mh_net.h:436
   pragma Import (C, xdr_mh_sBlock, "xdr_mh_sBlock");

   function xdr_mh_sMessage (arg1 : access rpc_xdr_h.XDR; arg2 : access mh_sMessage) return rpc_types_h.bool_t;  -- rt_mh_net.h:437
   pragma Import (C, xdr_mh_sMessage, "xdr_mh_sMessage");

   function xdr_mh_sReturn (arg1 : access rpc_xdr_h.XDR; arg2 : access mh_sReturn) return rpc_types_h.bool_t;  -- rt_mh_net.h:438
   pragma Import (C, xdr_mh_sReturn, "xdr_mh_sReturn");

end rt_mh_net_h;
